--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Open Cryptochat</title>
+    <title> Secret Ops Chat </title>
     <meta name="description" content="A minimalist, open-source, end-to-end RSA-2048 encrypted chat application.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
@@ -13,10 +13,10 @@
     <div id="vue-instance">
       <div class="chat-container full-width" ref="chatContainer">
         <div class="title-header">
-          <h1>OPEN CRYPTOCHAT</h1>
+          <h1> Secret Ops Chat </h1>
           <h2>A minimalist, open-source, end-to-end encrypted chat application.</h2>
-          <p>Disclaimer - This website is part of a tutorial on end-to-end webapp encryption, and is intended to be used as a learning resource. Please do not use it to share sensitive information.</p>
-          <p class="yellow">To learn how to build your own encrypted chat app, check out the <a class="blog-plug" target="_blank" rel="noopener" href="https://blog.patricktriest.com">tutorial</a>.</p>
+          <p>IN CODE WE TRUST.</p>
+          <a class="blog-plug" target="_blank" rel="noopener" href="https://osint.link">OSINT</a>.</p>
         </div>
         <div class="message-list">
           <div class="message full-width" v-for="message in messages">
